ref(router): use deis confd fork

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -2,13 +2,14 @@
 daemon off;
 
 user www-data;
-worker_processes {{ or (.deis_router_workerProcesses) "auto" }};
+worker_processes {{ or (getv "/deis/router/workerProcesses") "auto" }};
 pid /run/nginx.pid;
 
 events {
-    worker_connections {{ or (.deis_router_maxWorkerConnections) "768" }};
+    worker_connections {{ or (getv "/deis/router/maxWorkerConnections") "768" }};
     # multi_accept on;
 }
+
 
 http {
     # basic settings
@@ -18,45 +19,44 @@ http {
 
     # The Timeout value must be greater than the front facing load balancers timeout value.
     # Default is the deis recommended timeout value for ELB - 1200 seconds + 100s extra.
-    {{ $defaultTimeout := or (.deis_router_defaultTimeout) "1300" }}
+    {{ $defaultTimeout := or (getv "/deis/router/defaultTimeout") "1300" }}
     keepalive_timeout {{ $defaultTimeout }};
 
     types_hash_max_size 2048;
-    server_names_hash_max_size {{ or (.deis_router_serverNameHashMaxSize) "512" }};
-    server_names_hash_bucket_size {{ or (.deis_router_serverNameHashBucketSize) "64" }};
+    server_names_hash_max_size {{ or (getv "/deis/router/serverNameHashMaxSize") "512" }};
+    server_names_hash_bucket_size {{ or (getv "/deis/router/serverNameHashBucketSize") "64" }};
 
     include /opt/nginx/conf/mime.types;
     default_type application/octet-stream;
-    {{ if .deis_router_gzip }}
-    gzip {{ .deis_router_gzip }};
-    gzip_comp_level {{ or .deis_router_gzipCompLevel "5" }};
-    gzip_disable {{ or .deis_router_gzipDisable "\"msie6\"" }};
-    gzip_http_version {{ or .deis_router_gzipHttpVersion "1.1" }};
-    gzip_min_length {{ or .deis_router_gzipMinLength "256" }};
-    gzip_types {{ or .deis_router_gzipTypes "application/atom+xml application/javascript application/json application/rss+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/svg+xml image/x-icon text/css text/plain text/x-component" }};
-    gzip_proxied {{ or .deis_router_gzipProxied "any" }};
-    gzip_vary {{ or .deis_router_gzipVary "on" }};
+    {{ if exists "/deis/router/gzip" }}
+    gzip {{ getv "/deis/router/gzip" }};
+    gzip_comp_level {{ or (getv "/deis/router/gzipCompLevel") "5" }};
+    gzip_disable {{ or (getv "/deis/router/gzipDisable") "\"msie6\"" }};
+    gzip_http_version {{ or (getv "/deis/router/gzipHttpVersion") "1.1" }};
+    gzip_min_length {{ or (getv "/deis/router/gzipMinLength") "256" }};
+    gzip_types {{ or (getv "/deis/router/gzipTypes") "application/atom+xml application/javascript application/json application/rss+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/svg+xml image/x-icon text/css text/plain text/x-component" }};
+    gzip_proxied {{ or (getv "/deis/router/gzipProxied") "any" }};
+    gzip_vary {{ or (getv "/deis/router/gzipVary") "on" }};
     {{ end }}
 
-    {{ $useFirewall := or .deis_router_firewall_enabled "false" }}{{ if eq $useFirewall "true" }}# include naxsi rules
+    {{ $useFirewall := or (getv "/deis/router/firewall/enabled") "false" }}{{ if eq $useFirewall "true" }}# include naxsi rules
     include     /opt/nginx/firewall/naxsi_core.rules;
     include     /opt/nginx/firewall/web_apps.rules;
     include     /opt/nginx/firewall/scanner.rules;
     include     /opt/nginx/firewall/web_server.rules;{{ end }}
-    {{ $firewallErrorCode := or (.deis_router_firewall_errorCode) "400" }}
+    {{ $firewallErrorCode := or (getv "/deis/router/firewall/errorCode") "400" }}
+    client_max_body_size "{{ or (getv "/deis/router/bodySize") "1m" }}";
 
-    client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
-
-    {{ $useProxyProtocol := or (.deis_router_proxyProtocol) "false" }}{{ if ne $useProxyProtocol "false" }}
-    set_real_ip_from {{ or (.deis_router_proxyRealIpCidr) "10.0.0.0/8" }};
+    {{ $useProxyProtocol := or (getv "/deis/router/proxyProtocol") "false" }}{{ if ne $useProxyProtocol "false" }}
+    set_real_ip_from {{ or (getv "/deis/router/proxyRealIpCidr") "10.0.0.0/8" }};
     real_ip_header proxy_protocol;
     {{ end }}
 
-    log_format upstreaminfo '[$time_local] - {{ if .deis_router_proxyProtocol }}$proxy_protocol_addr{{ else }}$remote_addr{{ end }} - $remote_user - $status - "$request" - $bytes_sent - "$http_referer" - "$http_user_agent" - "$server_name" - $upstream_addr - $http_host - $upstream_response_time - $request_time';
+    log_format upstreaminfo '[$time_local] - {{ if ne $useProxyProtocol "false" }}$proxy_protocol_addr{{ else }}$remote_addr{{ end }} - $remote_user - $status - "$request" - $bytes_sent - "$http_referer" - "$http_user_agent" - "$server_name" - $upstream_addr - $http_host - $upstream_response_time - $request_time';
 
     # send logs to STDOUT so they can be seen using 'docker logs'
     access_log /opt/nginx/logs/access.log upstreaminfo;
-    error_log  /opt/nginx/logs/error.log {{ or (.deis_router_errorLogLevel) "error" }};
+    error_log  /opt/nginx/logs/error.log {{ or (getv "/deis/router/errorLogLevel") "error" }};
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -69,12 +69,12 @@ http {
       ''      $scheme;
     }
 
-    {{ $enforceHTTPS := or .deis_router_enforceHTTPS "false" }}
+    {{ $enforceHTTPS := or (getv "/deis/router/enforceHTTPS") "false" }}
 
     ## start deis-controller
-    {{ if .deis_controller_host }}
+    {{ if exists "/deis/controller/host" }}
     upstream deis-controller {
-        server {{ .deis_controller_host }}:{{ .deis_controller_port }};
+        server {{ getv "/deis/controller/host" }}:{{ getv "/deis/controller/port" }};
     }
     {{ end }}
 
@@ -82,7 +82,7 @@ http {
         server_name ~^deis\.(?<domain>.+)$;
         include deis.conf;
 
-        {{ if .deis_controller_host }}
+        {{ if exists "/deis/controller/host" }}
         location / {
             {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
@@ -93,9 +93,9 @@ http {
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
             {{ end }}
             proxy_redirect              off;
-            proxy_connect_timeout       {{ or (.deis_router_controller_timeout_connect) "10s" }};
-            proxy_send_timeout          {{ or (.deis_router_controller_timeout_send) "20m" }};
-            proxy_read_timeout          {{ or (.deis_router_controller_timeout_read) "20m" }};
+            proxy_connect_timeout       {{ or (getv "/deis/router/controller/timeout/connect") "10s" }};
+            proxy_send_timeout          {{ or (getv "/deis/router/controller/timeout/send") "20m" }};
+            proxy_read_timeout          {{ or (getv "/deis/router/controller/timeout/read") "20m" }};
 
             proxy_pass                  http://deis-controller;
         }
@@ -107,7 +107,8 @@ http {
 
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
-        }{{ end }}
+        }
+        {{ end }}
 
         {{ if eq $enforceHTTPS "true" }}
         if ($access_scheme != "https") {
@@ -118,9 +119,9 @@ http {
     ## end deis-controller
 
     ## start deis-store-gateway
-    {{ if .deis_store_gateway_host }}
+    {{ if exists "/deis/store/gateway/host" }}
     upstream deis-store-gateway {
-        server {{ .deis_store_gateway_host }}:{{ .deis_store_gateway_port }};
+        server {{ getv "/deis/store/gateway/host" }}:{{ getv "/deis/store/gateway/port" }};
     }
     {{ end }}
 
@@ -130,7 +131,7 @@ http {
 
         client_max_body_size            0;
 
-        {{ if .deis_store_gateway_host }}
+        {{ if exists "/deis/store/gateway/host" }}
         location / {
             {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
@@ -154,37 +155,34 @@ http {
         {{ end }}
     }
     ## end deis-store-gateway
-
+    {{ $useSSL := or (getv "/deis/router/sslCert") "false" }}
+    {{ $domains := ls "/deis/domains" }}
+    {{ $certs := ls "/deis/certs" }}
     ## start service definitions for each application
-    {{ $affinityArg := .deis_router_affinityArg }}
-    {{ $certs := .deis_certs }}
-    {{ $domains := .deis_domains }}
-    {{ $root := . }}
-    {{ range $service := .deis_services }}{{ if $service.Nodes }}
-    upstream {{ Base $service.Key }} {
-        {{ if $affinityArg }}hash $arg_{{ $affinityArg }} consistent;
+    {{ range $app := lsdir "/deis/services" }}
+    {{ $upstreams := printf "/deis/services/%s/*" $app}}
+    upstream {{ $app }} {
+        {{ if exists "/deis/router/affinityArg" }}
+        hash $arg_{{ getv "/deis/router/affinityArg" }} consistent;
         {{ end }}
-        {{ range $upstream := $service.Nodes }}server {{ $upstream.Value }};
+        {{ range gets $upstreams }}server {{ .Value }};
         {{ end }}
     }
-    {{ end }}
-
+    {{ $appContainers := gets $upstreams }}{{ $appContainerLen := len $appContainers }}
     ## server entries for custom domains
-    {{ range $domain := $domains }}{{ if eq (Base $service.Key) $domain.Value }}
+    {{ range $app_domain := $domains }}{{ if eq $app (getv (printf "/deis/domains/%s" $app_domain)) }}
     server {
-        server_name {{ Base $domain.Key }};
+        server_name {{ $app_domain }};
         {{/* if a SSL certificate is installed for this domain, use SSL */}}
         {{/* NOTE (bacongobbler): domains are separate from the default platform domain, */}}
         {{/* so we can't rely on deis.conf as each domain is an island */}}
-        {{/* FIXME (bacongobbler): confd turns hyphens to dashes, so we need to account */}}
-        {{/* for that in domains */}}
-        {{ if index $root (printf "deis_certs_%s_cert" (Replace (Base $domain.Key) "-" "_" -1)) }}
+        {{ if exists (printf "/deis/certs/%s/cert" $app_domain) }}
         server_name_in_redirect off;
         port_in_redirect off;
         listen 80{{ if ne $useProxyProtocol "false" }} proxy_protocol{{ end }};
         listen 443 ssl spdy{{ if ne $useProxyProtocol "false" }} proxy_protocol{{ end }};
-        ssl_certificate /etc/ssl/deis/certs/{{ Base $domain.Key }}.cert;
-        ssl_certificate_key /etc/ssl/deis/keys/{{ Base $domain.Key }}.key;
+        ssl_certificate /etc/ssl/deis/certs/{{ $app_domain }}.cert;
+        ssl_certificate_key /etc/ssl/deis/keys/{{ $app_domain }}.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         {{/* if there's no app SSL cert but we have a router SSL cert, enable that instead */}}
         {{/* TODO (bacongobbler): wait for https://github.com/kelseyhightower/confd/issues/270 */}}
@@ -193,8 +191,7 @@ http {
         {{ else }}
         include deis.conf;
         {{ end }}
-
-        {{ if $service.Nodes }}
+        {{ if ne $appContainerLen 0 }}
         location / {
             {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
@@ -229,26 +226,24 @@ http {
             }
             {{ end }}
 
-            proxy_pass                  http://{{ Base $service.Key }};
+            proxy_pass                  http://{{ $app }};
         }
         {{ else }}
         location / {
             return 503;
         }
         {{ end }}
-
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
-        }{{ end }}
-    }
-    {{ end }}{{ end }}
+        }
+        {{ end }}
+    }{{ end }}{{ end }}
     ## end entries for custom domains
 
     server {
-        server_name ~^{{ Base $service.Key }}\.(?<domain>.+)$;
+        server_name ~^{{ $app }}\.(?<domain>.+)$;
         include deis.conf;
-
-        {{ if $service.Nodes }}
+        {{ if ne $appContainerLen 0 }}
         location / {
             {{ if eq $useFirewall "true" }}include                     /opt/nginx/firewall/active-mode.rules;{{ end }}
             proxy_buffering             off;
@@ -283,7 +278,7 @@ http {
             }
             {{ end }}
 
-            proxy_pass                  http://{{ Base $service.Key }};
+            proxy_pass                  http://{{ $app }};
         }
         {{ else }}
         location / {
@@ -292,14 +287,14 @@ http {
         {{ end }}
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
-        }{{ end }}
-    }
-    {{ end }}
+        }
+        {{ end }}
+    }{{ end }}
     ## end service definitions for each application
 
     # healthcheck
     server {
-        listen 80 default_server{{ if .deis_router_proxyProtocol }} proxy_protocol{{ end }};
+        listen 80 default_server{{ if ne $useProxyProtocol "false" }} proxy_protocol{{ end }};
         location /health-check {
             default_type 'text/plain';
             access_log off;
@@ -312,16 +307,17 @@ http {
 }
 
 ## start builder
-{{ if .deis_builder_host }}
+{{ if exists "/deis/builder/host" }}
 stream {
+
     upstream builder {
-        server {{ .deis_builder_host }}:{{ .deis_builder_port }};
+        server {{ getv "/deis/builder/host" }}:{{ getv "/deis/builder/port" }};
     }
 
     server {
         listen 2222;
-        proxy_connect_timeout  {{ or (.deis_router_builder_timeout_connect) "10000" }};
-        proxy_timeout          {{ or (.deis_router_builder_timeout_tcp) "1200000" }};
+        proxy_connect_timeout  {{ or (getv "/deis/router/builder/timeout/connect") "10000" }};
+        proxy_timeout          {{ or (getv "/deis/router/builder/timeout/tcp") "1200000" }};
         proxy_pass builder;
     }
 }{{ end }}
