--- a/router/image/Dockerfile
+++ b/router/image/Dockerfile
@@ -6,8 +6,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y curl net-tools sudo
 
 # install confd
-RUN curl -sSL -o /usr/local/bin/confd https://github.com/kelseyhightower/confd/releases/download/v0.9.0/confd-0.9.0-linux-amd64 \
-    && chmod +x /usr/local/bin/confd
+RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-git-73f7489 \
+  && chmod +x /usr/local/bin/confd
 
 # install common packages
 RUN apt-get update && apt-get install -y libgeoip1 cron
