fix(router): return 404 for non-existing app

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -302,6 +302,10 @@ http {
         }
         location /router-nginx-status {
             stub_status on;
+            return 200;
+        }
+        location / {
+            return 404;
         }
     }
 }
