--- a/deisctl/units/deis-swarm-node.service
+++ b/deisctl/units/deis-swarm-node.service
@@ -4,9 +4,9 @@ Description=deis-swarm-node
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "docker history deis/swarm:v1.5.2  >/dev/null || docker pull deis/swarm:v1.5.2"
-ExecStartPre=/bin/sh -c "docker inspect deis-swarm-node >/dev/null && docker rm -f deis-swarm-node || true"
-ExecStart=/bin/sh -c "docker run --name deis-swarm-node -e HOST=$COREOS_PRIVATE_IPV4 deis/swarm:v1.5.2 join"
+ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/swarm` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
+ExecStartPre=/bin/sh -c "docker inspect deis-swarm-node >/dev/null 2>&1 && docker rm -f deis-swarm-node >/dev/null 2>&1 || true"
+ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/swarm` && docker run --name deis-swarm-node --rm -e HOST=$COREOS_PRIVATE_IPV4 -v /etc/environment_proxy:/etc/environment_proxy $IMAGE join"
 ExecStopPost=-/usr/bin/docker rm -f deis-swarm-node
 Restart=on-failure
 RestartSec=5
