chore(release): update version to v1.6.0

--- a/builder/image/slugbuilder/Dockerfile
+++ b/builder/image/slugbuilder/Dockerfile
@@ -11,4 +11,4 @@ ADD ./builder/ /tmp/builder
 RUN /tmp/builder/install-buildpacks
 ENTRYPOINT ["/tmp/builder/build.sh"]
 
-ENV DEIS_RELEASE 1.6.0-dev
+ENV DEIS_RELEASE 1.6.0
