--- a/store/base/Dockerfile
+++ b/store/base/Dockerfile
@@ -9,5 +9,5 @@ RUN DOCKER_BUILD=true /tmp/build.sh
 # Add shared confd configuration
 ADD . /app
 
-ENV DEIS_RELEASE 1.6.0-dev
+ENV DEIS_RELEASE 1.6.0
 
