ref(logger+publisher): use busybox as Docker base image

--- a/logger/image/Dockerfile
+++ b/logger/image/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu-debootstrap:14.04
+FROM busybox
 
 ENTRYPOINT ["/bin/logger"]
 CMD ["--enable-publish"]
@@ -7,4 +7,3 @@ EXPOSE 514
 ADD . /
 
 ENV DEIS_RELEASE 1.7.0-dev
-
