--- a/publisher/image/Dockerfile
+++ b/publisher/image/Dockerfile
@@ -1,7 +1,6 @@
-FROM ubuntu-debootstrap:14.04
+FROM busybox
 
 ADD bin/publisher /usr/local/bin/publisher
 ENTRYPOINT ["/usr/local/bin/publisher"]
 
 ENV DEIS_RELEASE 1.7.0-dev
-
