fix(database): remove postgres pid error from log

--- a/database/templates/postgresql.conf
+++ b/database/templates/postgresql.conf
@@ -46,7 +46,7 @@ ident_file = '/etc/postgresql/main/pg_ident.conf'	# ident configuration file
 					# (change requires restart)
 
 # If external_pid_file is not explicitly set, no extra PID file is written.
-external_pid_file = '/var/run/postgresql/daemon.pid'			# write an extra PID file
+external_pid_file = '/var/lib/postgresql/9.3/main/daemon.pid'			# write an extra PID file
 					# (change requires restart)
 
 
