fix(builder): use godep for running tests
godep will traverse up the tree until it finds a directory called
Godeps, so we don't have to "vendor" in the parent's Godeps dir to use
this workflow.

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -66,7 +66,7 @@ test-unit:
 
 test-functional:
 	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd:latest
-	GOPATH=`cd ../tests/ && godep path`:$(GOPATH) go test -v ./tests/...
+	godep go test -v ./tests/...
 
 test-style:
 # display output, then check
