ref(builder): rename image/ to rootfs/
This directory is *supposed* to be a reflection of the final rootfs
of the image, along with the base OS.

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -11,14 +11,14 @@ COMPONENT = $(notdir $(repo_path))
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 BINARIES := extract-domain extract-types extract-version generate-buildhook get-app-config get-app-values publish-release-controller yaml2json-procfile
-BINARY_DEST_DIR := image/bin
+BINARY_DEST_DIR := rootfs/bin
 
 build: check-docker
 	for i in $(BINARIES); do \
 		GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -installsuffix cgo -ldflags '-s' -o $(BINARY_DEST_DIR)/$$i src/$$i.go || exit 1; \
 		$(call check-static-binary,$(BINARY_DEST_DIR)/$$i) \
 	done
-	docker build -t $(IMAGE) image
+	docker build -t $(IMAGE) rootfs
 
 clean: check-docker check-registry
 	for i in $(BINARIES); do \
