ref(builder): change BINARY_DEST_DIR to /usr/bin
These binaries are non-essential for single-user operations, so they
belong in /usr/bin.

--- a/.gitignore
+++ b/.gitignore
@@ -22,14 +22,7 @@ controller/.secret_key
 logs/
 
 # local binaries, installers, and artifacts
-builder/rootfs/bin/extract-domain
-builder/rootfs/bin/extract-types
-builder/rootfs/bin/extract-version
-builder/rootfs/bin/generate-buildhook
-builder/rootfs/bin/get-app-config
-builder/rootfs/bin/get-app-values
-builder/rootfs/bin/publish-release-controller
-builder/rootfs/bin/yaml2json-procfile
+builder/rootfs/usr/bin
 cache/image/bin/
 client/dist/
 client/makeself/
