feat(publisher): add pprof to enable profiling

--- a/publisher/image/Dockerfile
+++ b/publisher/image/Dockerfile
@@ -1,5 +1,9 @@
 FROM alpine:3.1
 
+# install curl in the image so it is possible to get the runtime
+# profiling information without any additional package installation.
+RUN apk add --update-cache curl && rm -rf /var/cache/apk/*
+
 ADD bin/publisher /usr/local/bin/publisher
 ENTRYPOINT ["/usr/local/bin/publisher"]
 
