feat(router): allow customizing controller subdomain

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -79,7 +79,7 @@ http {
     {{ end }}
 
     server {
-        server_name ~^deis\.(?<domain>.+)$;
+        server_name ~^{{ or (getv "/deis/controller/subdomain") "deis" }}\.(?<domain>.+)$;
         include deis.conf;
 
         {{ if exists "/deis/controller/host" }}
