fix(router): avoid consistently hashing on empty string

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -158,6 +158,11 @@ http {
     {{ $useSSL := or (getv "/deis/router/sslCert") "false" }}
     {{ $domains := ls "/deis/domains" }}
     {{ $certs := ls "/deis/certs" }}
+    ## workaround for nginx hashing empty string bug http://trac.nginx.org/nginx/ticket/765
+    {{ if exists "/deis/router/affinityArg" }}
+    set_random $prng 0 99;
+    set_if_empty $arg_{{ getv "/deis/router/affinityArg" }} $prng;
+    {{ end }}
     ## start service definitions for each application
     {{ range $app := lsdir "/deis/services" }}
     {{ $upstreams := printf "/deis/services/%s/*" $app}}
