fix(logspout): use $IMAGE_PREFIX like other components

--- a/logspout/Makefile
+++ b/logspout/Makefile
@@ -8,7 +8,7 @@ GO_PACKAGES = utils
 GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
 
 COMPONENT = $(notdir $(repo_path))
-DOCKER_IMAGE := deis/$(COMPONENT)
+DOCKER_IMAGE := $(IMAGE_PREFIX)$(COMPONENT)
 RELEASE_IMAGE := $(DOCKER_IMAGE):$(BUILD_TAG)
 DEV_DOCKER_IMAGE := $(DEV_REGISTRY)/$(RELEASE_IMAGE)
 
