--- a/router/image/templates/deis.conf
+++ b/router/image/templates/deis.conf
@@ -6,5 +6,8 @@ listen 80{{ if exists "/deis/router/proxyProtocol" }} proxy_protocol{{ end }};
 listen 443 ssl spdy{{ if exists "/deis/router/proxyProtocol" }} proxy_protocol{{ end }};
 ssl_certificate /etc/ssl/deis.cert;
 ssl_certificate_key /etc/ssl/deis.key;
+{{ if exists "/deis/router/sslDhparam" }}
+ssl_dhparam /etc/ssl/dhparam.pem;
+{{ end }}
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 {{ end }}
