feat(router): use one folder for all HSTS keys

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -69,12 +69,17 @@ http {
       ''      $scheme;
     }
 
-    {{ $enforceHTTPS := or (getv "/deis/router/enforceHTTPS") "false" }}
-
-    {{ $secondsToEnforceHSTS := or (getv "/deis/router/secondsToEnforceHSTS") "2628000" }}
+    ## HSTS instructs the browser to replace all HTTP links with HTTPS links for this domain until maxAge seconds from now
+    {{ $enableHSTS := or (getv "/deis/router/hsts/enabled") "false" }}
+    {{ $maxAgeHSTS := or (getv "/deis/router/hsts/maxAge") "2628000" }}
+    {{ $includeSubdomainsHSTS := or (getv "/deis/router/hsts/includeSubDomains") "false" }}
+    {{ $preloadHSTS := or (getv "/deis/router/hsts/preload") "false" }}
     map $access_scheme $sts {
-      'https' 'max-age={{ $secondsToEnforceHSTS }}; preload';
+      'https' 'max-age={{ $maxAgeHSTS }}{{ if eq $includeSubdomainsHSTS "true" }}; includeSubDomains{{ end }}{{ if eq $preloadHSTS "true" }}; preload{{ end }}';
     }
+
+    ## since HSTS headers are not permitted on HTTP requests, 301 redirects to HTTPS resources are also necessary
+    {{ $enforceHTTPS := or (getv "/deis/router/enforceHTTPS") $enableHSTS "false" }}
 
     ## start deis-controller
     {{ if exists "/deis/controller/host" }}
@@ -119,6 +124,9 @@ http {
         if ($access_scheme != "https") {
           return 301 https://$host$request_uri;
         }
+        {{ end }}
+
+        {{ if eq $enableHSTS "true" }}
         add_header Strict-Transport-Security $sts always;
         {{ end }}
     }
@@ -230,6 +238,9 @@ http {
             if ($access_scheme != "https") {
               return 301 https://$host$request_uri;
             }
+            {{ end }}
+
+            {{ if eq $enableHSTS "true" }}
             add_header Strict-Transport-Security $sts always;
             {{ end }}
 
@@ -289,6 +300,9 @@ http {
             if ($access_scheme != "https") {
               return 301 https://$host$request_uri;
             }
+            {{ end }}
+
+            {{ if eq $enableHSTS "true" }}
             add_header Strict-Transport-Security $sts always;
             {{ end }}
 
