feat(router): read list of preferred ciphers

--- a/router/image/templates/deis.conf
+++ b/router/image/templates/deis.conf
@@ -7,4 +7,8 @@ listen 443 ssl spdy{{ if exists "/deis/router/proxyProtocol" }} proxy_protocol{{
 ssl_certificate /etc/ssl/deis.cert;
 ssl_certificate_key /etc/ssl/deis.key;
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+{{ if exists "/deis/router/sslCiphers" }}
+ssl_ciphers '{{ getv "/deis/router/sslCiphers" }}';
+ssl_prefer_server_ciphers on;
+{{ end }}
 {{ end }}
