--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -184,6 +184,10 @@ http {
         ssl_certificate /etc/ssl/deis/certs/{{ $app_domain }}.cert;
         ssl_certificate_key /etc/ssl/deis/keys/{{ $app_domain }}.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        {{ if exists "/deis/router/sslCiphers" }}
+        ssl_ciphers '{{ getv "/deis/router/sslCiphers" }}';
+        ssl_prefer_server_ciphers on;
+        {{ end }}
         {{/* if there's no app SSL cert but we have a router SSL cert, enable that instead */}}
         {{/* TODO (bacongobbler): wait for https://github.com/kelseyhightower/confd/issues/270 */}}
         {{/* so we can apply this config to just subdomains of the platform domain. */}}
