--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,9 +3,7 @@ include ../includes.mk
 # the filepath to this repository, relative to $GOPATH/src
 repo_path = github.com/deis/deis/tests
 
-GO_FILES = apps_test.go auth_test.go builds_test.go config_test.go integration_test.go \
-			keys_test.go limits_test.go main.go perms_test.go ps_test.go releases_test.go \
-			smoke_test.go tags_test.go
+GO_FILES = $(wildcard *.go)
 GO_PACKAGES = dockercli etcdutils mock utils
 GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
 
