--- a/deisctl/units/deis-mesos-marathon.service
+++ b/deisctl/units/deis-mesos-marathon.service
@@ -10,15 +10,15 @@ RestartSec=20
 TimeoutStartSec=0
 ExecStartPre=-/bin/sh -c "etcdctl get /deis/scheduler/mesos/marathon >/dev/null 2>&1 || etcdctl mk /deis/scheduler/mesos/marathon"
 ExecStartPre=/bin/sh -c "etcdctl set /deis/scheduler/mesos/marathon $COREOS_PRIVATE_IPV4"
-ExecStartPre=-/usr/bin/docker kill coreos-mesos-marathon
-ExecStartPre=-/usr/bin/docker rm coreos-mesos-marathon
-ExecStartPre=/usr/bin/docker pull aledbf/mesos-marathon:0.22.1
-ExecStart=/usr/bin/sh -c "/usr/bin/docker run \
+ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-marathon` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
+ExecStartPre=-/usr/bin/docker kill deis-mesos-marathon
+ExecStartPre=-/usr/bin/docker rm deis-mesos-marathon
+ExecStart=/usr/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-marathon` && docker run \
   --name=coreos-mesos-marathon \
   --net=host \
   -e HOST=$COREOS_PRIVATE_IPV4 \
-  aledbf/mesos-marathon:0.22.1"
-ExecStop=-/usr/bin/docker stop coreos-mesos-marathon
+  $IMAGE"
+ExecStop=-/usr/bin/docker stop deis-mesos-marathon
 
 [Install]
 WantedBy=multi-user.target
