--- a/deisctl/units/deis-mesos-master.service
+++ b/deisctl/units/deis-mesos-master.service
@@ -8,18 +8,18 @@ EnvironmentFile=/etc/environment
 Restart=on-failure
 RestartSec=20
 TimeoutStartSec=0
-ExecStartPre=-/usr/bin/docker kill coreos-mesos-master
-ExecStartPre=-/usr/bin/docker rm coreos-mesos-master
-ExecStartPre=/bin/sh -c "docker inspect coreos-mesos-master-data >/dev/null 2>&1 || docker run --name coreos-mesos-master-data -v /tmp/mesos-master alpine:3.1 /bin/true"
-ExecStartPre=/usr/bin/docker pull aledbf/mesos-master:0.22.1
-ExecStart=/usr/bin/sh -c "/usr/bin/docker run \
-  --volumes-from=coreos-mesos-master-data \
-  --name=coreos-mesos-master \
+ExecStartPre=-/usr/bin/docker kill deis-mesos-master
+ExecStartPre=-/usr/bin/docker rm deis-mesos-master
+ExecStartPre=/bin/sh -c "docker inspect deis-mesos-master-data >/dev/null 2>&1 || docker run --name deis-mesos-master-data -v /tmp/mesos-master alpine:3.1 /bin/true"
+ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-master` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
+ExecStart=/usr/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-master` && docker run \
+  --volumes-from=deis-mesos-master-data \
+  --name=deis-mesos-master \
   --privileged \
   --net=host \
   -e HOST=$COREOS_PRIVATE_IPV4 \
-  aledbf/mesos-master:0.22.1"
-ExecStop=-/usr/bin/docker stop coreos-mesos-master
+  $IMAGE"
+ExecStop=-/usr/bin/docker stop deis-mesos-master
 
 [Install]
 WantedBy=multi-user.target
