chore(*): remove unnecessary ExecStopPost from all units

--- a/deisctl/units/deis-store-daemon.service
+++ b/deisctl/units/deis-store-daemon.service
@@ -8,8 +8,7 @@ ExecStartPre=/bin/sh -c "docker inspect deis-store-daemon-data >/dev/null 2>&1 |
 ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/store-daemon` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
 ExecStartPre=/bin/sh -c "docker inspect deis-store-daemon >/dev/null 2>&1 && docker rm -f deis-store-daemon >/dev/null 2>&1 || true"
 ExecStartPre=/usr/bin/sleep 10
-ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/store-daemon` && docker run --name deis-store-daemon --volumes-from=deis-store-daemon-data --rm -e HOST=$COREOS_PRIVATE_IPV4 -p 6800 --net host $IMAGE"
-ExecStopPost=-/usr/bin/docker rm -f deis-store-daemon
+ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/store-daemon` && docker run --name deis-store-daemon --rm --volumes-from=deis-store-daemon-data -e HOST=$COREOS_PRIVATE_IPV4 -p 6800 --net host $IMAGE"
 Restart=on-failure
 RestartSec=5
 
