--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -10,7 +10,7 @@ GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
 COMPONENT = $(notdir $(repo_path))
 DOCKER_IMAGE := $(IMAGE_PREFIX)$(COMPONENT)
 RELEASE_IMAGE := $(DOCKER_IMAGE):$(BUILD_TAG)
-REMOTE_IMAGE := $(REGISTRY)/$(RELEASE_IMAGE)
+REMOTE_IMAGE := $(REGISTRY)$(RELEASE_IMAGE)
 BINARY_DEST_DIR = image/bin
 
 build: check-docker
