--- a/registry/Makefile
+++ b/registry/Makefile
@@ -2,7 +2,7 @@ include ../includes.mk
 
 COMPONENT = registry
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
-DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
+DEV_IMAGE = $(REGISTRY)$(IMAGE)
 
 build: check-docker
 	docker build -t $(IMAGE) .
