feat(mesos): change docker cmd format and make ExecstartPre statements onle liners
fix(style): fix go vet erorrs for mesos

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ publisher/Godeps/
 publisher/image/bin/publisher
 router/Godeps/
 swarm/image/bin/
+mesos/**/bin/
+mesos/**/bindata/
+mesos/Dockerfile
+mesos/marathon-assembly.jar
 
 # coverage reports
 .coverage
