--- a/deisctl/units/deis-mesos-marathon.service
+++ b/deisctl/units/deis-mesos-marathon.service
@@ -13,11 +13,7 @@ ExecStartPre=/bin/sh -c "etcdctl set /deis/scheduler/mesos/marathon $COREOS_PRIV
 ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-marathon` && docker history $IMAGE >/dev/null 2>&1 || docker pull $IMAGE"
 ExecStartPre=-/usr/bin/docker kill deis-mesos-marathon
 ExecStartPre=-/usr/bin/docker rm deis-mesos-marathon
-ExecStart=/usr/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-marathon` && docker run \
-  --name=coreos-mesos-marathon \
-  --net=host \
-  -e HOST=$COREOS_PRIVATE_IPV4 \
-  $IMAGE"
+ExecStart=/usr/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/mesos-marathon` && docker run --name=deis-mesos-marathon --net=host -e HOST=$COREOS_PRIVATE_IPV4 $IMAGE"
 ExecStop=-/usr/bin/docker stop deis-mesos-marathon
 
 [Install]
