chore(contrib/ec2): rename ec2 to aws
We were incorrectly using "AWS" and "EC2" interchangeably, when in
fact EC2 is one of the services that compose AWS. Deis clusters on
AWS make use of EC2 and CloudFormation and other AWS services,
so calling it EC2 is incorrect, and using both terms is inconsistent.

--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,8 @@ contrib/coreos/user-data
 # Local controller settings file
 controller/deis/local_settings.py
 
-# EC2 CloudFormation Setup
-contrib/ec2/cloudformation.json
+# AWS CloudFormation Setup
+contrib/aws/cloudformation.json
 
 # GCE generated user-data
 contrib/gce/gce-user-data
